WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
243186
AX: ApplicationAccessibilityEnabled pref value is not synced from the UI process to web content process upon initialization
https://bugs.webkit.org/show_bug.cgi?id=243186
Summary
AX: ApplicationAccessibilityEnabled pref value is not synced from the UI proc...
Tyler Wilcock
Reported
2022-07-25 17:24:28 PDT
When initializing a new web process, the UI process should copy over the value of these prefs so web content has the correct state for them.
Attachments
Patch
(5.38 KB, patch)
2022-07-25 17:33 PDT
,
Tyler Wilcock
no flags
Details
Formatted Diff
Diff
Patch
(5.59 KB, patch)
2022-07-25 19:07 PDT
,
Tyler Wilcock
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2022-07-25 17:24:39 PDT
<
rdar://problem/97577824
>
Tyler Wilcock
Comment 2
2022-07-25 17:30:41 PDT
rdar://97334840
Tyler Wilcock
Comment 3
2022-07-25 17:33:44 PDT
Created
attachment 461207
[details]
Patch
chris fleizach
Comment 4
2022-07-25 17:42:00 PDT
Comment on
attachment 461207
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=461207&action=review
> Source/WebKit/WebProcess/cocoa/WebProcessCocoa.mm:1050 > + if (preferences.accessibilityEnabled)
It seems like we might want to also set if it’s off As in if the pref is written and then loaded the next time
Tyler Wilcock
Comment 5
2022-07-25 19:07:44 PDT
Created
attachment 461210
[details]
Patch
EWS
Comment 6
2022-07-26 11:32:03 PDT
Committed
252837@main
(b315e3a4cf18): <
https://commits.webkit.org/252837@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 461210
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug