AX: ApplicationAccessibilityEnabled pref value is not synced from the UI process to web content process upon initialization https://bugs.webkit.org/show_bug.cgi?id=243186

Reviewed by Chris Fleizach.

Currently when initializing a new web process (WebProcess::platformInitializeWebProcess),
we copy the value of some accessibility preferences (e.g. ReduceMotionEnabled) from the
UI process to the web process. However, we don't copy the value of ApplicationAccessibilityEnabled,
which means we sometimes get into a state where accessibility is never loaded when an AX client is
active before the UI process and web process are created.

With this patch, we copy the ApplicationAccessibilityEnabled pref value from the UI process to web
process upon initialization.

* Source/WebKit/Platform/spi/Cocoa/AccessibilitySupportSPI.h:
* Source/WebKit/Shared/WebProcessCreationParameters.cpp:
(WebKit::WebProcessCreationParameters::encode const):
(WebKit::WebProcessCreationParameters::decode):
* Source/WebKit/Shared/WebProcessCreationParameters.h:
* Source/WebKit/UIProcess/Cocoa/WebProcessPoolCocoa.mm:
(WebKit::WebProcessPool::platformInitializeWebProcess):
* Source/WebKit/WebProcess/cocoa/WebProcessCocoa.mm:
(WebKit::WebProcess::platformInitializeWebProcess):

Canonical link: https://commits.webkit.org/252837@main